# DSP

./: AGC.cpp  AGC.h  CMakeLists.txt  FIRFilter.cpp  FIRFilter.h  WavHeader.h  WavSink.cpp  WavSink.h  WavSource.cpp  WavSource.h  main.cpp
